force-app/main/default/objects/Equipment__c/Equipment__c.object-meta.xml
<CustomObject>
    <description>This object is used to store device/equipment details within a facility.</description>
    <label>Equipment</label>
    <nameField>
        <label>Equipment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Equipments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>