force-app/main/default/objects/Equipment__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Vendor Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Equipments</relationshipLabel>
    <relationshipName>Equipments</relationshipName>
    <type>Lookup</type>
</CustomField>