force-app/main/default/objects/Equipment__c/fields/Bill_Patient_Separately__c.field-meta.xml
<CustomField>
    <fullName>Bill_Patient_Separately__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bill Patient Separately</label>
    <type>Checkbox</type>
</CustomField>