force-app/main/default/objects/Equipment__c/fields/Cost_to_Patient__c.field-meta.xml
<CustomField>
    <fullName>Cost_to_Patient__c</fullName>
    <label>Cost to Patient</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>