force-app/main/default/objects/Equipment__c/fields/Equipment_Image__c.field-meta.xml
<CustomField>
    <fullName>Equipment_Image__c</fullName>
    <label>Equipment Image</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>