force-app/main/default/objects/Equipment__c/fields/Equipment_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Equipment_Quantity__c</fullName>
    <label>Equipment Quantity</label>
    <summaryForeignKey>Equipment_Line_Item__c.Equipment_Name__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>