force-app/main/default/objects/Equipment__c/fields/Inventory_Type__c.field-meta.xml
<CustomField>
    <fullName>Inventory_Type__c</fullName>
    <label>Inventory Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>other</fullName>
            </value>
            <value>
                <fullName>Other 1</fullName>
            </value>
            <value>
                <fullName>Other 2</fullName>
            </value>
            <value>
                <fullName>Injectibles</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>