force-app/main/default/objects/Equipment__c/fields/Measure_Type__c.field-meta.xml
<CustomField>
    <fullName>Measure_Type__c</fullName>
    <label>Measure Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>