force-app/main/default/objects/Equipment__c/fields/No_of_Available_Equipment__c.field-meta.xml
<CustomField>
    <fullName>No_of_Available_Equipment__c</fullName>
    <formula>Equipment_Quantity__c -  (Number_of_Equipment_Under_Maintenance__c +  Number_of_Equipment_Utilized__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Units Available</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>