force-app/main/default/objects/Equipment__c/fields/Number_of_Equipment_Under_Maintenance__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Equipment_Under_Maintenance__c</fullName>
    <label>Number of Equipment Under Maintenance</label>
    <summaryFilterItems>
        <field>Equipment_Line_Item__c.Is_Under_Maintenance__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Equipment_Line_Item__c.Equipment_Name__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>