force-app/main/default/objects/Equipment__c/fields/Procedure_Code__c.field-meta.xml
<CustomField>
    <fullName>Procedure_Code__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Procedure Code</label>
    <referenceTo>Procedure__c</referenceTo>
    <relationshipLabel>Equipments</relationshipLabel>
    <relationshipName>Equipments</relationshipName>
    <type>Lookup</type>
</CustomField>