force-app/main/default/objects/Equipment__c/fields/Quantity__c.field-meta.xml
<CustomField>
    <fullName>Quantity__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Units Procured</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>