force-app/main/default/objects/Equipment__c/recordTypes/Inventory.recordType-meta.xml
<RecordType>
    <fullName>Inventory</fullName>
    <active>true</active>
    <label>Inventory</label>
</RecordType>