force-app/main/default/objects/Equipment__c/recordTypes/New_Equipment.recordType-meta.xml
<RecordType>
    <fullName>New_Equipment</fullName>
    <active>true</active>
    <label>New Equipment</label>
</RecordType>