force-app/main/default/objects/Equipment__c/validationRules/after_create_unit_procured_not_editable.validationRule-meta.xml
<ValidationRule>
    <fullName>after_create_unit_procured_not_editable</fullName>
    <active>true</active>
    <errorConditionFormula>AND( NOT(ISNEW()), 
ISCHANGED(Quantity__c) 
 )</errorConditionFormula>
    <errorMessage>Units Procured cannot be edited</errorMessage>
</ValidationRule>