force-app/main/default/objects/Equipment__c/validationRules/Expiry_date_cannot_be_pastdate.validationRule-meta.xml
<ValidationRule>
    <fullName>Expiry_date_cannot_be_pastdate</fullName>
    <active>true</active>
    <errorConditionFormula>Expiry_Date__c &lt; Today()</errorConditionFormula>
    <errorMessage>&quot;Expiry Date Cannot be a past Date&quot;</errorMessage>
</ValidationRule>