force-app/main/default/objects/Equipment__c/validationRules/Quantity_Should_not_be_less_than_1.validationRule-meta.xml
<ValidationRule>
    <fullName>Quantity_Should_not_be_less_than_1</fullName>
    <active>true</active>
    <description>Quantity should not be less than 1</description>
    <errorConditionFormula>OR(Quantity__c  &lt; 1 , ISBLANK(Quantity__c))</errorConditionFormula>
    <errorDisplayField>Quantity__c</errorDisplayField>
    <errorMessage>Procured Units Quantity cannot be less than 1</errorMessage>
</ValidationRule>