force-app/main/default/objects/Equipment__c/listViews/All_Equipments.listView-meta.xml
<ListView>
    <fullName>All_Equipments</fullName>
    <columns>NAME</columns>
    <columns>Equipment_Quantity__c</columns>
    <columns>Location__c</columns>
    <columns>No_of_Available_Equipment__c</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Mine</filterScope>
    <label>All Equipments</label>
</ListView>